objects/BMCServiceDesk__BMC_Tag__c.object
<CustomObject>
    <description>BMC_Tag. CMDB Specifies a label that can be associated to any CI. This label is used to categorize the CIs to create a logical grouping. For example, the administrator of a blueprint deployment can tag the resource set as public, private, secure, and highly secure. This will then be used by the placement engine in performing the deployment in appropriate network zones.</description>
    <fields>
        <fullName>BMCServiceDesk__Category_Name__c</fullName>
        <label>Category Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Is_Category__c</fullName>
        <label>Is Category</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Tag</label>
    <nameField>
        <label>Tag Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>